force-app/main/default/objects/RTV_POS_Data__c/RTV_POS_Data__c.object-meta.xml
<CustomObject>
    <description>CFS直营店或者Digital五大仓的POS数据</description>
    <label>RTV POS Data</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV POS Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>