force-app/main/default/objects/RTV_POS_Data__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <description>授权码</description>
    <inlineHelpText>授权码</inlineHelpText>
    <label>Auth Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>