force-app/main/default/objects/RTV_POS_Data__c/fields/Earliest_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Delivery_Date__c</fullName>
    <description>POS数据读取日期</description>
    <label>Earliest Delivery Date</label>
    <type>Date</type>
</CustomField>