force-app/main/default/objects/RTV_POS_Data__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <description>POS写入数据关联Item使用</description>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>