force-app/main/default/objects/RTV_POS_Data__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>调拨单号</description>
    <inlineHelpText>调拨单号</inlineHelpText>
    <label>Order No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>