force-app/main/default/objects/RTV_POS_Data__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>DIG</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>