force-app/main/default/objects/RTV_POS_Data__c/fields/Transfer_Time__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Time__c</fullName>
    <label>Transfer Time</label>
    <type>DateTime</type>
</CustomField>