force-app/main/default/objects/RTV_POS_Data__c/recordTypes/Completed.recordType-meta.xml
<RecordType>
    <fullName>Completed</fullName>
    <active>true</active>
    <description>已处理</description>
    <label>Completed</label>
</RecordType>