force-app/main/default/objects/RTV_POS_Data__c/listViews/Pending.recordType-meta.xml
<RecordType>
    <fullName>Pending</fullName>
    <active>true</active>
    <description>待处理</description>
    <label>Pending</label>
</RecordType>