force-app/main/default/objects/RTV_POS_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auth_Code__c</columns>
    <columns>Order_No__c</columns>
    <columns>Transfer_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Owner_Name__c</columns>
    <columns>Sales_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>