force-app/main/default/objects/RTV_POS_Data__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Auth_Code__c</columns>
    <columns>Order_No__c</columns>
    <columns>Transfer_Time__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTV_POS_Data__c.Completed</value>
    </filters>
    <label>Completed</label>
</ListView>